# airspyhf-zeromq

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: verify-build-matrix.yml
cmake/modules/: FindLIBAIRSPY.cmake  FindLIBAIRSPYHF.cmake
tests/: CMakeLists.txt  test_zmq_loss_detection.c  test_zmq_timestamp.c
tools/: CMakeLists.txt
tools/src/: CMakeLists.txt  airspyhf_rx.c
